--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.0-beta1"
   }
 }
